# MotiveMinds_Demo_MCP

./: .dockerignore  .env.example  .env.production.example  .gitignore  COPILOT_AGENT_CONFIGURATION.md  README-DOCKER.md  README.md  app.py  apprunner.yaml  buildaserver.md  copilot-connector.yaml  copilot-studio-connector.yaml  docker-compose.yml  dockerfile  main.py  mcp-openapi.json  mcpserverdocs.md  microsoft-copilot-mcp.yaml  nginx.conf  openapi.yaml  openapirest.yaml  pyproject.toml  requirements.txt  test_server.py
