[project]
name = "cybex-sap-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anyio>=4.11.0",
    "fastmcp>=2.12.4",
    "mcp[cli]>=1.15.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "starlette>=0.48.0",
    "urllib3>=2.5.0",
    "uvicorn>=0.37.0",
]
